--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!-- footer -->
     <load src="./partials/footer.html" />
     <!-- mob menu -->
-    <load src="" />
+    <load src="./partials/modal.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
